# rinha-backend-rust

./: .tool-versions  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  nginx.conf  schema.sql
src/: controller.rs  db.rs  jobs.rs  main.rs  redis.rs
