[package]
name = "rinha-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
deadpool-redis = { version = "0.12", features = ["serde"] }
config = "0.13.3"
deadqueue = "0.2"
sql-builder = "3.1"